--- a/src/components/layout/Nav.astro
+++ b/src/components/layout/Nav.astro
@@ -8,11 +8,20 @@ interface Props {
 }
 
 const { isMobile, activePage } = Astro.props;
+const ignoredPages = ["feed", "home"] satisfies PageName[];
+type IgnoredPageName = typeof ignoredPages[number];
+type ValidPageName =  Exclude<PageName, IgnoredPageName>
+
+function isIgnoredPage(n: PageName): n is ValidPageName {
+  return !ignoredPages.includes(n);
+}
+
+const validPages: ValidPageName[] = PAGE_NAMES.filter(isIgnoredPage);
 const locale = getLangFromUrl(Astro.url, true);
 const localizePage = (page: PageName) => getLocalizedPage(locale, page);
-const t = useTranslation(locale)
-const pages = PAGE_NAMES.map(name => ({
-  name: t('navigation', name),
+const t = useTranslation(locale);
+const pages = validPages.map(name => ({
+  name: t("navigation", name),
   path: localizePage(name),
   href: localizePage(name),
 }));
