--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,37 +1,137 @@
 ---
+import { type InferGetStaticParamsType } from "astro";
 import Layout from "@/layouts/WithHeader.astro";
-import { isSupportedLang, DEFAULT_LOCALE, LANGUAGES } from "@/utils/i18n";
-import { slugToCanonical } from "@/utils/content";
+import { DEFAULT_LOCALE, LANGUAGES, getFullLocalizedPath, getLocalizedPage, useTranslation } from "@/utils/i18n";
+import { getBlogEntry, slugToCanonical } from "@/utils/content";
+import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
+import FeaturedPost from "@/components/content/FeaturedPost.astro";
 
-interface Params {
-  lang: string;
+export const prerender = true;
+export function getStaticPaths() {
+  return LANGUAGES.map(lang => ({ params: { lang } }));
 }
 
-const { lang } = Astro.params as unknown as Params;
+type Params = InferGetStaticParamsType<typeof getStaticPaths>;
 
-if (!isSupportedLang(lang)) {
-  return Astro.redirect(`/404?from=${Astro.url.pathname}`);
-}
+const { lang } = Astro.params as Params;
+const getLocalizedPath = getFullLocalizedPath(lang);
+const canonical = slugToCanonical(getLocalizedPath("/"));
 
-const translations = LANGUAGES.filter(l => l !== lang).map(language => ({
-  lang: language,
-  slug: `/${language}`,
-}));
+const featuredPost = await getBlogEntry(
+  lang !== DEFAULT_LOCALE ? "en/entendiendo-los-snapshots-de-jest" : "es/10-consejos-que-yo-deberia-seguir.mdx"
+);
 
-const { origin } = Astro.url;
+const urls = {
+  blog: getLocalizedPage(lang, "blog"),
+  about: getLocalizedPage(lang, "about"),
+  contact: getLocalizedPage(lang, "contact"),
+};
 
-const canonical = slugToCanonical(lang === DEFAULT_LOCALE ? "/" : `/${lang}`, origin);
+const t = useTranslation(lang);
 ---
 
-<Layout lang={lang} canonical={canonical} description="HOME" title="Misael Taveras web">
-  <Fragment slot="head">
-    {
-      translations.map(translation => (
-        <link rel="alternate" href={slugToCanonical(translation.slug, origin)} hreflang={translation.lang} />
-      ))
-    }
-  </Fragment>
-  <main>
-    <h1>Welcome to taverasmisael <span class="text-gradient bg-gradient-to-tr from-slate-400 to-blue-500">v2</span></h1>
+<Layout canonical={canonical} lang={lang} description={t("page_descriptions", "home")} title={t("navigation", "home")}>
+  <main class="container mx-auto w-full space-y-8 px-2">
+    <FullWidthBlock
+      withContainer
+      class="bg-blue-200 py-32 shadow dark:bg-slate-950 dark:bg-gradient-to-tl dark:from-slate-900 dark:to-slate-950 lg:py-64"
+    >
+      <h1>Hi, I'm <strong>Misael Taveras</strong></h1>
+      <p>I'm a frontend engineer, currently working with React, TypeScript, and Node.</p>
+
+      <p>You can <a href={urls.about} class="btn btn-primary" rel="prefetch">read more about me here.</a></p>
+    </FullWidthBlock>
+    <div class="grid gap-8 py-16 md:grid-cols-2 lg:py-32">
+      <div>
+        <h2>I also write a blog</h2>
+        <p>
+          My end goal is to help people learn new things, and I do that by writing about the things I learn. There
+          you'll find articles about JavaScript, React, Visual Studio Code, and softskills like communication and
+          productivity.
+        </p>
+      </div>
+      <div>
+        {featuredPost && <FeaturedPost post={featuredPost.entry} meta={featuredPost.meta} />}
+
+        <a href={urls.blog} rel="prefetch">Check all posts</a>
+      </div>
+    </div>
+    <FullWidthBlock withContainer class="bg-slate-200 py-16 dark:bg-slate-900 lg:py-32">
+      <h2>Testimonials</h2>
+      <div class="grid gap-8 md:grid-cols-2">
+        <div class="prose xl:prose-lg dark:prose-invert">
+          <p>
+            Working with diferent teams and people, I've had the opportunity to learn a lot from them. Here are some of
+            the things they've said about me.
+          </p>
+          <p>
+            If you want to know more about my work, you can check my{" "}
+            <a href="https://www.linkedin.com/in/taverasmisael/" rel="nofollow external">LinkedIn profile</a>.
+          </p><p>
+            If you are ready to work with me, you can <a href={urls.contact} rel="prefetch">contact me here</a>.
+          </p>
+        </div>
+        <div>
+          <!-- TODO: USE the real testimonials -->
+          <blockquote>
+            <p>
+              <em>
+                Misael is a very talented developer. He is a great communicator and is always willing to help. He is
+                very knowledgeable and is always looking to learn new things. He is a great asset to any team.
+              </em>
+            </p>
+            <div class="mt-4 flex items-center space-x-4">
+              <img
+                src="https://avatars.githubusercontent.com/u/1065621?s=460&u=1a4b0b2b5b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2&v=4"
+                alt="Avatar of Jonathan"
+                class="h-12 w-12 rounded-full"
+              />
+              <div class="text-sm font-medium not-italic">
+                <span class="block text-gray-900 dark:text-gray-100">Jonathan</span>
+                <span class="text-gray-500 dark:text-gray-400">Software Engineer</span>
+              </div>
+            </div>
+          </blockquote>
+          <blockquote>
+            <p>
+              <em>
+                Misael is a very talented developer. He is a great communicator and is always willing to help. He is
+                very knowledgeable and is always looking to learn new things. He is a great asset to any team.
+              </em>
+            </p>
+            <div class="mt-4 flex items-center space-x-4">
+              <img
+                src="https://avatars.githubusercontent.com/u/1065621?s=460&u=1a4b0b2b5b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2&v=4"
+                alt="Avatar of Jonathan"
+                class="h-12 w-12 rounded-full"
+              />
+              <div class="text-sm font-medium not-italic">
+                <span class="block text-gray-900 dark:text-gray-100">Jonathan</span>
+                <span class="text-gray-500 dark:text-gray-400">Software Engineer</span>
+              </div>
+            </div>
+          </blockquote>
+          <blockquote>
+            <p>
+              <em>
+                Misael is a very talented developer. He is a great communicator and is always willing to help. He is
+                very knowledgeable and is always looking to learn new things. He is a great asset to any team.
+              </em>
+            </p>
+            <div class="mt-4 flex items-center space-x-4">
+              <img
+                src="https://avatars.githubusercontent.com/u/1065621?s=460&u=1a4b0b2b5b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2&v=4"
+                alt="Avatar of Jonathan"
+                class="h-12 w-12 rounded-full"
+              />
+              <div class="text-sm font-medium not-italic">
+                <span class="block text-gray-900 dark:text-gray-100">Jonathan</span>
+                <span class="text-gray-500 dark:text-gray-400">Software Engineer</span>
+              </div>
+            </div>
+          </blockquote>
+        </div>
+      </div>
+    </FullWidthBlock>
   </main>
 </Layout>
