--- a/src/components/content/CardPost.astro
+++ b/src/components/content/CardPost.astro
@@ -1,9 +1,9 @@
 ---
-import type { BlogEntryMeta } from "@/utils/content";
+import { getEntryURL, type BlogEntryMeta } from "@/utils/content";
 import type { CollectionEntry } from "astro:content";
 
 export interface Props {
-  post: CollectionEntry<'blog'>;
+  post: CollectionEntry<"blog">;
   meta: BlogEntryMeta;
 }
 
@@ -14,7 +14,7 @@ const { post, meta } = Astro.props;
   class="group flex flex-col justify-between rounded-md p-4 text-slate-800 ring-blue-100 transition-all hover:bg-blue-50 hover:shadow-sm hover:ring-2 dark:text-slate-200 dark:ring-gray-700 dark:hover:bg-gray-950/50"
 >
   <div>
-    <a href={meta.canonical || post.slug} class="block hover:underline">
+    <a href={getEntryURL("blog", post.slug)} class="block hover:underline">
       <h2
         class="mb-2 text-2xl font-semibold text-slate-900 group-hover:text-slate-950 dark:text-blue-50 dark:group-hover:text-slate-100 md:mb-4"
       >
