--- a/src/components/content/FeaturedPost.astro
+++ b/src/components/content/FeaturedPost.astro
@@ -1,5 +1,5 @@
 ---
-import type { BlogEntryMeta } from "@/utils/content";
+import { getEntryURL, type BlogEntryMeta } from "@/utils/content";
 import type { CollectionEntry } from "astro:content";
 
 export interface Props {
@@ -25,7 +25,7 @@ const { post, meta } = Astro.props;
     <h2
       class="mb-6 mt-3 max-w-md text-2xl font-semibold text-blue-900 hover:underline dark:text-blue-50 sm:mb-8 sm:text-4xl"
     >
-      <a href={meta.canonical}>{meta.title}</a>
+      <a href={getEntryURL('blog', post.slug)}>{meta.title}</a>
     </h2>
     <p class="mb-4 font-light sm:mb-8 md:text-lg">{meta.description}</p>
   </div>
