update imports: don't use i18n folder directly

--- a/src/pages/[lang]/blog/[...entrySlug].astro
+++ b/src/pages/[lang]/blog/[...entrySlug].astro
@@ -5,7 +5,7 @@ import Layout from "@/layouts/Entry.astro";
 import { Image } from "astro:assets";
 import { getBlogEntry } from "@/utils/content";
 import PostTranslations from "@/components/PostTranslations.astro";
-import type { Language } from "@/i18n";
+import type { Language } from "@/utils/i18n";
 
 type Params = {
   lang: Language;
