--- a/src/components/RecentEntries.astro
+++ b/src/components/RecentEntries.astro
@@ -1,5 +1,5 @@
 ---
-import type { Language } from "@/i18n";
+import type { Language } from "@/utils/i18n";
 import { getEntriesByLang, type CollectionKey } from "@/utils/content";
 import CardPost from "./content/CardPost.astro";
 
