--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { DEFAULT_LOCALE } from "@/i18n";
+import { DEFAULT_LOCALE } from "@/utils/i18n";
 import { isSupportedLang } from "@/utils/i18n";
 
 const headerLang = Astro.request.headers.get("accept-language");
