create basic structure for command/search bar

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -51,7 +51,7 @@ const t = useTranslation(lang);
           <Nav lang={lang} activePage={basePath} />
         </div>
         <div class="insetr-0 absolute right-1 flex items-center pr-2 sm:relative sm:right-0">
-          <button class="rounded-full p-2 hover:bg-blue-100/40 dark:hover:bg-gray-700/40 dark:hover:text-white">
+          <button id="search-button" class="rounded-full p-2 hover:bg-blue-100/40 dark:hover:bg-gray-700/40 dark:hover:text-white">
             <span class="sr-only">{t("ui", "search")}</span>
             <svg
               class="h-6 w-6"
