--- a/src/components/content/FeaturedPost.astro
+++ b/src/components/content/FeaturedPost.astro
@@ -8,6 +8,7 @@ export interface Props {
 }
 
 const { post, meta } = Astro.props;
+const href = getEntryURL("blog", post.slug);
 ---
 
 <div
@@ -18,19 +19,21 @@ const { post, meta } = Astro.props;
   >
   </div>
   <div
-    class="motion-safe:animate-wiggle absolute inset-3 -z-10 rounded-full bg-blue-400/30 blur-xl dark:bg-blue-700/30"
+    class="absolute inset-3 -z-10 rounded-full bg-blue-400/30 blur-xl motion-safe:animate-wiggle dark:bg-blue-700/30"
   >
   </div>
   <div>
     <h2
       class="mb-6 mt-3 max-w-md text-2xl font-semibold text-blue-900 hover:underline dark:text-blue-50 sm:mb-8 sm:text-4xl"
     >
-      <a href={getEntryURL('blog', post.slug)}>{meta.title}</a>
+      <a href={href}>{meta.title}</a>
     </h2>
     <p class="mb-4 font-light sm:mb-8 md:text-lg">{meta.description}</p>
   </div>
   <div class="flex items-center justify-between border-t border-slate-100 pt-3 dark:border-slate-900 sm:pt-6">
-    <time datetime={post.data.date.toISOString()} class="block flex-1 text-sm text-slate-800 dark:text-slate-300">{meta.formattedDate}</time>
+    <time datetime={post.data.date.toISOString()} class="block flex-1 text-sm text-slate-800 dark:text-slate-300"
+      >{meta.formattedDate}</time
+    >
     <ul class="flex gap-2 text-xs sm:gap-4">
       {
         post.data.tags.map(tag => {
