--- a/src/layouts/pages/Home.astro
+++ b/src/layouts/pages/Home.astro
@@ -61,7 +61,7 @@ const t = useTranslation(lang);
           <slot name="testimonials" />
         </div>
         <div class="mt-8 lg:mt-0">
-          <Testimonials />
+          <Testimonials lang={lang} />
         </div>
       </div>
     </FullWidthBlock>
