--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -9,7 +9,85 @@ const { lang } = Astro.props;
 const testimonials = await getEntriesByLang("testimonial", lang);
 ---
 
-<section class="space-y-8">
+<section class="testimonial grid h-full rounded bg-white p-4 shadow-sm ring-2 ring-blue-50 dark:bg-black">
+  <div id="lyrics" class="mb-8">
+    <em>
+      Misael is a very talented developer. He is a great communicator and is always willing to help. He is very
+      knowledgeable and is always looking to learn new things. He is a great asset to any team.
+    </em>
+  </div>
+  <div id="player" class="grid grid-cols-3 items-center px-2">
+    <div id="current" class="inline-flex items-center space-x-2">
+      <img src="https://avatars.githubusercontent.com/u/8240480?v=4" alt="Avatar of Jonathan" class="h-8 w-8 rounded" />
+      <p class="text-xs leading-4">
+        <strong class="block text-sm font-semibold text-gray-900 underline-offset-2 hover:underline dark:text-gray-100"
+          ><a href="to.do">Efrain Peralta</a></strong
+        >
+        <span class="text-gray-500 dark:text-gray-400">Founder @ Turnly</span>
+      </p>
+    </div>
+    <div id="controls" class="flex flex-1 justify-center">
+      <div class="flex items-center gap-4 text-slate-600">
+        <button type="button" aria-label="Next"
+          ><svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-8"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M21 16.811c0 .864-.933 1.405-1.683.977l-7.108-4.062a1.125 1.125 0 010-1.953l7.108-4.062A1.125 1.125 0 0121 8.688v8.123zM11.25 16.811c0 .864-.933 1.405-1.683.977l-7.108-4.062a1.125 1.125 0 010-1.953L9.567 7.71a1.125 1.125 0 011.683.977v8.123z"
+            ></path>
+          </svg>
+        </button>
+        <button type="button" aria-label="Next"
+          ><svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-8"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z"
+            ></path>
+          </svg>
+        </button>
+        <button type="button" aria-label="Next"
+          ><svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-8"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M3 8.688c0-.864.933-1.405 1.683-.977l7.108 4.062a1.125 1.125 0 010 1.953l-7.108 4.062A1.125 1.125 0 013 16.81V8.688zM12.75 8.688c0-.864.933-1.405 1.683-.977l7.108 4.062a1.125 1.125 0 010 1.953l-7.108 4.062a1.125 1.125 0 01-1.683-.977V8.688z"
+            ></path>
+          </svg>
+        </button>
+      </div>
+    </div>
+  </div>
+</section>
+
+<style>
+  .testimonial {
+    grid-template-rows: 1fr 50px;
+  }
+</style>
+
+<!-- <section class="space-y-8">
   {
     testimonials.map(t => (
       <blockquote class="p-4">
@@ -30,7 +108,7 @@ const testimonials = await getEntriesByLang("testimonial", lang);
       </blockquote>
     ))
   }
-</section>
+</section> -->
 
 <!-- <blockquote>
   <p>
