--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -9,16 +9,30 @@ const { lang } = Astro.props;
 const testimonials = await getEntriesByLang("testimonial", lang);
 ---
 
-<section class="testimonial grid h-full rounded bg-white p-4 shadow-sm ring-2 ring-blue-50 dark:bg-black">
-  <div id="lyrics" class="mb-8">
-    <em>
-      Misael is a very talented developer. He is a great communicator and is always willing to help. He is very
-      knowledgeable and is always looking to learn new things. He is a great asset to any team.
-    </em>
+<section
+  class="testimonial mx-auto grid h-full max-w-md bg-white p-4 shadow-sm ring-2 ring-white dark:bg-black dark:ring-black"
+>
+  <div id="lyrics" class="mx-auto mb-8 max-h-80 overflow-auto rounded-md bg-red-500 p-4">
+    <div class="m-auto max-w-xl text-2xl font-semibold leading-relaxed text-red-950">
+      <p>
+        <span class="text-slate-50/90">Es excepcional como compañero de trabajo.</span>
+        Sus conocimientos y habilidades en el área son bastante sólidos. Tiene una gran habilidad para enseñar.
+      </p><p>
+        Misael Se preocupa por su equipo. A la fecha de hoy sigue siendo mi mentor en mis proyectos personales y
+        profesionales, apoya mis ideas de forma incondicional.
+      </p>
+    </div>
   </div>
-  <div id="player" class="grid grid-cols-3 items-center px-2">
-    <div id="current" class="inline-flex items-center space-x-2">
-      <img src="https://avatars.githubusercontent.com/u/8240480?v=4" alt="Avatar of Jonathan" class="h-8 w-8 rounded" />
+  <div id="player" class="relative grid grid-cols-3 items-center gap-2 px-2 md:gap-4">
+    <div id="progress-bar" class="absolute -top-3 left-0 h-1 w-full overflow-hidden rounded bg-slate-700">
+      <div id="progress" class="absolute left-0 top-0 h-1 w-1/2 rounded bg-red-50"/>
+    </div>
+    <div id="current" class="col-span-2 inline-flex items-center space-x-2">
+      <img
+        src="https://avatars.githubusercontent.com/u/40646537?v=4"
+        alt="Avatar of Jonathan"
+        class="h-8 w-8 rounded"
+      />
       <p class="text-xs leading-4">
         <strong class="block text-sm font-semibold text-gray-900 underline-offset-2 hover:underline dark:text-gray-100"
           ><a href="to.do">Efrain Peralta</a></strong
@@ -27,15 +41,15 @@ const testimonials = await getEntriesByLang("testimonial", lang);
       </p>
     </div>
     <div id="controls" class="flex flex-1 justify-center">
-      <div class="flex items-center gap-4 text-slate-600">
-        <button type="button" aria-label="Next"
+      <div class="flex items-center gap-2 text-slate-600 dark:text-blue-50 lg:gap-4">
+        <button type="button" aria-label="Previous"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
-            class="w-8"
+            class="w-6 lg:w-8"
           >
             <path
               stroke-linecap="round"
@@ -44,20 +58,12 @@ const testimonials = await getEntriesByLang("testimonial", lang);
             ></path>
           </svg>
         </button>
-        <button type="button" aria-label="Next"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            class="w-8"
-          >
+        <button type="button" aria-label="Play"
+          ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 lg:w-8">
             <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z"
-            ></path>
+              fill-rule="evenodd"
+              d="M4.5 5.653c0-1.426 1.529-2.33 2.779-1.643l11.54 6.348c1.295.712 1.295 2.573 0 3.285L7.28 19.991c-1.25.687-2.779-.217-2.779-1.643V5.653z"
+              clip-rule="evenodd"></path>
           </svg>
         </button>
         <button type="button" aria-label="Next"
@@ -67,7 +73,7 @@ const testimonials = await getEntriesByLang("testimonial", lang);
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
-            class="w-8"
+            class="w-6 lg:w-8"
           >
             <path
               stroke-linecap="round"
