--- a/src/layouts/pages/Home.astro
+++ b/src/layouts/pages/Home.astro
@@ -56,7 +56,7 @@ const t = useTranslation(lang);
       </div>
     </div>
     <FullWidthBlock withContainer class="bg-slate-200 py-16 dark:bg-slate-900 xl:py-32">
-      <div class="gap-8 lg:grid lg:grid-cols-2">
+      <div class="gap-8 md:grid md:grid-cols-2">
         <div class="prose dark:prose-invert xl:prose-lg">
           <slot name="testimonials" />
         </div>
