--- a/src/components/Testimonials/Container.astro
+++ b/src/components/Testimonials/Container.astro
@@ -11,7 +11,7 @@ const testimonials = await getEntriesByLang("testimonial", lang);
 ---
 
 <section
-  class="testimonial empty:none mx-auto grid h-full max-w-md bg-white p-4 shadow-sm ring-2 ring-white dark:bg-black dark:ring-black"
+  class="testimonial empty:none mx-auto grid h-full max-w-md bg-white p-4 shadow transition-all hover:shadow-slate-50 dark:bg-black dark:hover:shadow-slate-950"
 >
   <Testimonials items={testimonials} lang={lang} client:only />
 </section>
